[SELC-5042] chore: remove tag external-v2 for endpoint not used on External API (#248)